--- a/config.json.template
+++ b/config.json.template
@@ -3,10 +3,10 @@
 
 	"django_secret_key" : "00000000000000000000000000000000000000000000000000",
 
-	"db_engine" : "django.db.backends.sqlite3",
+	"db_engine" : "ddjango.db.backends.postgresql_psycopg2",
 	"db_host" : "localhost",
-	"db_name" : "/var/www/site/site.sqlite3",
-	"db_user" : "user",
+	"db_name" : "sdmm",
+	"db_user" : "sdmm",
 	"db_password" : "password",
 
 	"smtp_addr" : "",
